docs: target Arrow Java 19.0; note millis-timestamp rescale is version-independent
Latest Arrow Java is 19.0 (spike used 17.0.0). Verified against arrow-java main
(ahead of 19): the JDBC adapter still has only TimestampConsumer/TimestampTZConsumer,
both writing TimeStampMilliVector (Timestamp.getTime(), millis) -- so upgrading does
NOT remove the millis->micros rescale. Spec now targets 19.0 for the helper and
records the rescale as required regardless of Arrow version.

kata: ingestr#3svm (epic)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>